# rcli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
assets/: user_list.csv
src/: lib.rs  main.rs  process.rs  subcmd.rs
src/cli/: mod.rs
src/cli/base64/: arg.rs  mod.rs  process.rs
src/cli/csv/: arg.rs  mod.rs  process.rs
src/cli/genpwd/: arg.rs  mod.rs  process.rs
