[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
description = "A Rust tools for converting file formats with CLI."

authors = ["Min Cai <min.cai.gj@fujifilm.com>"]
readme = "README.md"
license = "Apache-2.0"

[dependencies]
anstyle = "1"
clap = { version = "4.5", features = ["color", "derive"] }
serde = "1"
thiserror = "2"


[target."cfg(linux)".dependencies]
libc = "0"
[target."cfg(windows)".dependencies]
windows = { version = "0", features = ["Win32_System_Console"] }
colored = "2.0"
